# spec

./: .env.example  .gitignore  CLAUDE.md  INDEX.md  README.md  pyproject.toml
config/: specs.yaml
scripts/: build_index.py  download_pdfs.py  download_specs.py  ingest.py
src/spec_qa/: __init__.py  cli.py  embeddings.py  parser.py  rag.py  vectorstore.py
tests/: test_embeddings.py  test_ingest.py  test_parser.py  test_rag.py  test_vectorstore.py
