[project]
name = "spec-qa"
version = "0.1.0"
description = "3GPP TS 36 (LTE) / TS 38 (NR) radio specifications Q&A via Claude RAG"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GeneBaik9" }]

dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.20",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.2",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "typer>=0.13.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
spec-qa = "spec_qa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_qa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
